--- a/index.html
+++ b/index.html
@@ -1,12 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Coffee</title>
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Montserrat"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&family=Patrick+Hand&display=swap"
+      rel="stylesheet"
+    />
+    <style>
+      body {
+        padding: 0;
+        margin: 0;
+      }
+      body,
+      h1,
+      h2,
+      h3,
+      h4,
+      h5,
+      h6,
+      .w3-wide {
+        font-family: "Montserrat", sans-serif;
+      }
+
+      .affiliate-container {
+        background: url("images/bg.png");
+        background-repeat: no-repeat;
+        background-size: cover;
+        width: 100%;
+        height: 100vh;
+      }
+
+      .welcome-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+      }
+
+      .welcome {
+        height: 200px;
+      }
+    </style>
+  </head>
+  <body>
+    <div>
+      <!-- <div style="text-align:center">
+            <h1>Welcome to</h1>
+            <h1 class="w3-jumbo" style="font-family:Patrick Hand">COFFEE'S SHOP</h1>
+        </div> -->
+      <div class="w3-container affiliate-container">
+        <div class="welcome-container">
+            <img src="welcome.png" alt="" class="welcome" />
+        </div>
+        <div class="w3-hide-large" style="padding-top: 83px"></div>
+        <div class="w3-text-white">
+          <h1 class="">Shopee Affiliate</h1>
+          <h5 class="w3-small">
+            Do you want to be a Shoppee Affiliate? Just click the link below and
+            it will redirect you to the Shoppee Affiliate Form.
+          </h5>
+          <p>
+            <a
+              href="https://shope.ee/9ekDpWX9rk"
+              class="w3-button w3-black w3-padding-large w3-large"
+              >Shopee Affiliate Link</a
+            >
+          </p>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
